# data-pipeline-vbplnew-service

./: Dockerfile  README.md  docker-compose.yml  env.py  index_router.py  main.py  pyproject.toml  tracing.py
.github/workflows/: alembic-database-migration.yml  deploy-fastapi-vercel-cloudflare.yml  gitleaks.yml
app/auth/: dependencies.py  enums.py  schemas.py  security.py
app/documents/: router.py  service.py
app/workflows/: router.py  service.py
common/response/: base_response.py
database/: config.py  models.py
lifespan/: lifespan.py  shutdown.py  startup.py
middlewares/: log_request_and_response_middleware.py
migrations/: env.py
migrations/versions/: 8eaec96870ae_create_request_logs.py  d08f3fc2b8e3_initial_database.py
utils/: log_function.py
