[project]
name = "data-pipeline-vbplnew-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=46.0.6",
    "environs>=15.0.0",
    "fastapi>=0.135.3",
    "fastapi-voyager>=0.19.2",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
