[project]
name = "data-pipeline-vbplnew-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "20206205tech-python-auth>=0.3.0",
    "alembic>=1.18.4",
    "cryptography>=48.0.0",
    "environs>=15.0.0",
    "fastapi>=0.136.3",
    "fastapi-voyager>=0.27.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
