[project]
name = "data-pipeline-vbplnew-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "20206205tech-python-auth>=0.3.0",
    "alembic>=1.18.4",
    "cryptography>=49.0.0",
    "environs>=15.0.0",
    "fastapi>=0.137.2",
    "fastapi-voyager>=0.27.0",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.13.0",
    "scalar-fastapi>=1.8.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
